<resources>
    <string name="app_name">Preference Example</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="profile_info">Profile Info</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="app_info_title">App Theme</string>
    <string name="blind_mode_active">Color blind mode active</string>
    <string name="blind_mode_passive">Color blind mode passive</string>
    <string name="blind_mode">Color Blind Mode</string>
    <string name="web_page">Web Page</string>
    <string name="your_country">Your Country</string>
</resources>